11.k8s-test/kosta_k8s_lab/05/ingress/calculator.yaml
apiVersion: v1
kind: Service
metadata:
  name: calculator
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: calculator
