11.k8s-test/kosta_k8s_lab/05/ingress/guestbook.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: guestbook
